--- a/m4/html/index.html
+++ b/m4/html/index.html
@@ -61,6 +61,17 @@
               <td>34</td>
             </tr>
             <tr>
+              <td>24</td>
+              <td>24</td>
+              <td>Ork</td>
+              <td>Blood Axes</td>
+              <td>0</td>
+              <td>Human</td>
+              <td>Dark Angels</td>
+              <td>14</td>
+              <td>34</td>
+            </tr>
+            <tr>
               <td>3</td>
               <td>3</td>
               <td>Human</td>
@@ -125,17 +136,6 @@
               <td>Deathskulls</td>
               <td>0</td>
               <td>33</td>
-            </tr>
-            <tr>
-              <td>9</td>
-              <td>9</td>
-              <td>Eldar</td>
-              <td>Dark Reapers</td>
-              <td>5</td>
-              <td>Human</td>
-              <td>Blood Angels</td>
-              <td>0</td>
-              <td>32</td>
             </tr>
           </tbody>
         </table>
